--- a/vidly/vidly/Views/Movies/Random.cshtml
+++ b/vidly/vidly/Views/Movies/Random.cshtml
@@ -1,8 +1,27 @@
-﻿@model vidly.Models.Movie
+﻿@model vidly.ViewModel.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+@{ 
+    var className = Model.Customers.Count > 0 ? "popular" : null;
+}
 
+<h2 class="@className">@Model.Movie.Name</h2>
+
+
+@if (Model.Customers.Count == 0)
+{
+    <p>No one has rented this movie before.</p>
+}
+
+else
+{
+    <ul>
+        @foreach (var Customer in Model.Customers)
+        {
+            <li>@Customer.Name</li>
+        }
+    </ul>
+}
